--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,8 @@ platform_packages = framework-arduino-samd-seeed@https://github.com/Seeed-Studio
 upload_port = /dev/ttyACM0
 monitor_port = /dev/ttyACM0
 
+monitor_filters = direct
+
 ; upload and debug via black magic probe:
 ;debug_tool = blackmagic
 ;debug_port = /dev/ttyBmpGdb     ;alias name by udev rules
